# NoKnow

./: .dockerignore  .gitignore  LICENCE  README.md  docker-compose.yaml
api/: .coveragerc  .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  t.py
api/.app_folder_template/routes/: _routes.py
api/.app_folder_template/schemas/: _schemas.py
api/.migrations/: env.py
api/.migrations/versions/: 5b4d53bb6603_removed chatroom record messages column and user friend count column_.py  6ef5d1a23117_user_friendship_link_tables_add_on_.py  eb332cbe8957_initial.py
api/create_superuser/: __main__.py  utilities.py
api/src/: main.py
api/src/apps/admin/routes/: admin_auth_routes.py  admin_blacklisted_email_routes.py  admin_blacklisted_token_routes.py  admin_chat_routes.py  admin_user_routes.py
api/src/apps/admin/schemas/: admin_base_schemas.py  admin_blacklisted_token_schemas.py
api/src/apps/admin/services/: admin_auth_services.py  admin_blacklisted_email_services.py  admin_blacklisted_token_services.py  admin_chat_services.py  admin_user_services.py
api/src/apps/admin/tests/: base_test_admin_user_and_token_blacklisting.py  test_admin_chat.py
api/src/apps/auth/routes/: base_routes.py  google_oauth2_routes.py
api/src/apps/auth/schemas/: auth_validators.py  base_schemas.py
api/src/apps/auth/services/: base_services.py  jwt_services.py  otp_services.py  verification_services.py
api/src/apps/auth/tests/: base_test_user_signup_login_jwt.py
api/src/apps/chat/routes/: base_routes.py  private_routes.py
api/src/apps/chat/schemas/: base_schemas.py  chat_validators.py
api/src/apps/chat/services/: base_services.py  model_services.py  private_services.py  websocket_manager.py  websocket_services.py
api/src/apps/chat/tests/: test_private_chatroom_and_messaging_features.py  test_public_chatroom_and_messages_features.py  utilities.py
api/src/apps/user/routes/: base_routes.py
api/src/apps/user/schemas/: base_schemas.py
api/src/apps/user/services/: base_services.py  model_services.py
api/src/background_tasks/: celery_email_verification_task.py
api/src/caching/schemas/: chat_cache_schemas.py  user_cache_schemas.py
api/src/caching/services/: redis_chatroom_caching.py  redis_otp_caching.py  redis_user_caching.py
api/src/configurations/: config.py  exception_handler.py  logger.py
api/src/configurations/apps_config/: config.py  exception_handler.py  limiter.py  logger.py
api/src/db/: database.py  models.py
api/src/exceptions/: http_exceptions.py
api/src/generics/: schemas.py  services.py  validation_schemas.py
api/src/services/: celery.py  flush_chatroom_messages_to_db.py  flush_chatroom_modification_timestamps_to_db.py  mail.py  redis.py  redis_pubsub_listener.py  websocket_manager.py
api/src/templates/: OTP.html  base.html  test.html
api/src/tests/: conftest.py
api/src/utilities/: ts.py  utilities.py
api/src/utilities/tests/: test_utilities.py
(+249 files in other folders)
