[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosmtplib==4.0.2",
    "aiosqlite==0.21.0",
    "alembic==1.16.5",
    "amqp==5.3.1",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "asgiref==3.10.0",
    "asyncpg==0.30.0",
    "babel==2.17.0",
    "backrefs==5.9",
    "bcrypt==4.3.0",
    "billiard==4.2.2",
    "black==25.1.0",
    "blinker==1.9.0",
    "celery==5.5.3",
    "certifi==2025.8.3",
    "cffi==2.0.0",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1.2",
    "click-repl==0.3.0",
    "colorama==0.4.6",
    "coverage==7.10.6",
    "cryptography==46.0.3",
    "deprecated==1.2.18",
    "dnspython==2.7.0",
    "ecdsa==0.19.1",
    "email-validator==2.3.0",
    "fakeredis==2.32.0",
    "fastapi[standard]==0.133.0",
    "fastapi-cache2==0.2.2",
    "flake8==7.3.0",
    "ghp-import==2.1.0",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.10",
    "iniconfig==2.1.0",
    "isort==7.0.0",
    "jinja2==3.1.6",
    "kombu==5.5.4",
    "limits==5.5.0",
    "mako==1.3.10",
    "markdown==3.9",
    "markupsafe==3.0.2",
    "mccabe==0.7.0",
    "mergedeep==1.3.4",
    "mkdocs==1.6.1",
    "mkdocs-get-deps==0.2.0",
    "mkdocs-material==9.6.22",
    "mkdocs-material-extensions==1.3.1",
    "mypy-extensions==1.1.0",
    "packaging==25.0",
    "paginate==0.5.7",
    "pathspec==0.12.1",
    "pendulum==3.1.0",
    "platformdirs==4.4.0",
    "pluggy==1.6.0",
    "prompt-toolkit==3.0.52",
    "psycopg==3.2.9",
    "psycopg-binary==3.2.9",
    "psycopg2==2.9.10",
    "pyasn1==0.6.1",
    "pycodestyle==2.14.0",
    "pycparser==2.22",
    "pydantic==2.12.3",
    "pydantic-core==2.41.4",
    "pydantic-settings==2.11.0",
    "pyflakes==3.4.0",
    "pygments==2.19.2",
    "pyjwt==2.10.1",
    "pymdown-extensions==10.16.1",
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "pytest-cov==7.0.0",
    "pytest-env==1.1.5",
    "python-dateutil==2.9.0.post0",
    "python-decouple==3.8",
    "python-dotenv==1.1.1",
    "python-jose==3.5.0",
    "python-json-logger==4.0.0",
    "python-multipart==0.0.20",
    "pyyaml==6.0.2",
    "pyyaml-env-tag==1.1",
    "redis==6.4.0",
    "regex==2025.9.18",
    "requests==2.32.5",
    "rsa==4.9.1",
    "six==1.17.0",
    "slowapi==0.1.9",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "sqlalchemy==2.0.43",
    "sqlmodel==0.0.24",
    "starlette==0.47.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uvicorn==0.37.0",
    "vine==5.1.0",
    "watchdog==6.0.0",
    "watchfiles==1.1.0",
    "wcwidth==0.2.14",
    "websockets==15.0.1",
    "wrapt==1.17.3",
]
